--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,10 @@
-trigger:
-  - '*'
+  trigger:
+    - '*'
   
-variables:
+  variables:
     buildConfiguration: 'Release'
   
-stages:
+  stages:
   - stage: 'Build'
     displayName: 'Build the web application'
     jobs: 
@@ -84,6 +84,6 @@ stages:
             - task: AzureWebApp@1
               displayName: 'Azure App Service Deploy: website'
               inputs:
-                azureSubscription: 'Devops-visolitcloud-Enocean-ServiceConnection'
+                azureSubscription: 'Resource Manager - Tailspin - Space Game'
                 appName: '$(WebAppName)'
                 package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
