--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@
   
   variables:
     buildConfiguration: 'Release'
-    dotnetSdkVersion: '6.0'
+    dotnetSdkVersion: '8.x'
   
   stages:
   - stage: 'Build'
@@ -18,7 +18,7 @@
   
       variables:
         wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
-        dotnetSdkVersion: '6.0'
+        dotnetSdkVersion: '8.x'
   
       steps:
       - task: UseDotNet@2
